# PZSP2

./: .gitignore  README.md  backend.env  docker-compose.dev.yml  docker-compose.yml  postgres.env
services/backend/: Dockerfile  Dockerfile.dev  pyproject.toml
services/backend/alembic/versions/: 1d5a0bc01fa4_systemexception_added.py  97b9e398ea57_added_news_table.py  b976e217e3bb_user_sex_and_birth_date.py  cf583a64a768_first_revision.py
services/backend/app/: __init__.py  main.py
services/backend/app/api/: api.py  deps.py
services/backend/app/api/endpoints/: analysis.py  front_news.py  response_models.py  users.py  websocket.py
services/backend/app/core/: config.py
services/backend/app/crud/: __init__.py  base.py  crud_news.py  crud_recording.py  crud_result.py  crud_systemexception.py  crud_user.py
services/backend/app/db/: base.py  init_db.py
services/backend/app/models/: __init__.py  news.py  recording.py  result.py  systemexception.py  user.py  ws_messages.py
services/backend/app/schemas/: __init__.py  analysis_result.py  news.py  recording.py  systemexception.py  user.py
services/backend/app/services/: bowel_service.py  celery_monitor.py  notification_service.py  ws_manager.py
services/backend/app/tests/crud/: test_user.py
services/backend/app/worker/: Dockerfile  Dockerfile.dev  app.py  task_handers.py
services/backend/src/: __init__.py
services/backend/tests/: test_backend.py
services/backend/worker/: app.py
services/celery/: Dockerfile  pyproject.toml
services/celery/src/: __init__.py
services/celery/tests/: test_celery.py
(+102 files in other folders)
