[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["noFrostoo <nofrost1a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.72.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
SQLAlchemy = "^1.4.11"
requests = "^2.25.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
alembic = "^1.7.5"
psycopg2-binary = "^2.9.2"
celery = "4.4.6"
redis = "3.5.3"
python-multipart = "^0.0.5"
sqlalchemy-json = "^0.4.0"
websockets = "^10.1"
uvicorn = "^0.17.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.901"
pytest = "^6.2.5"
black = "^21.11b1"

[tool.poetry.scripts]
run = "app.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

