[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["noFrostoo <nofrost1a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^4.4.6"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
run = "src:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
